# data-gateway

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile.template  LICENSE  MANIFEST.in  README.md  cloudbuild.yaml  docker-compose.yml  mkdocs.yml  poll.py  pyproject.toml  requirements-dev.txt  requirements-pi-dev.txt  requirements-pi.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: balena-deploy.yml  balena.yml  build-docs.yml  gcloud-deploy.yml  python-ci.yml  release.yml  update-pull-request.yml
.gitlab/merge_request_templates/: default.md
ETH_MA_RaphaelFischer_FS20/AuxPrograms/: packet_reader.py
cloud_function/: big_query.py  exceptions.py  file_handler.py  forms.py  main.py  requirements.txt  tests.py
cloud_function/data_preprocess/: preprocess.py
cloud_function/preprocessing/: preprocess.py
cloud_functions/: __init__.py  big_query.py  exceptions.py  file_handler.py  forms.py  main.py  requirements.txt  window_handler.py
cloud_functions/create_installation/: errors.py  forms.py  main.py  requirements.txt
cloud_functions/preprocessing/: legacy_json.py  measurements.py  preprocess.py
data_gateway/: __init__.py  cli.py  configuration.py  data_gateway.py  exceptions.py  gateway.py  new_packet_reader.py  packet_assembler.py  packet_reader.py  persistence.py  routine.py  serial_port.py  serial_protocol.py  uploaders.py
data_gateway/dummy_serial/: __init__.py  dummy_serial.py  utils.py
data_gateway/reader/: configuration.py  packet_reader.py  simulated_serial.py
data_gateway/readers/: configuration.py  packet_reader.py
data_preprocess/: IMUprocess.py  MeasurementData.py  functions.py  legacy_json.py  measurements.py  preprocess.py  requirements.txt
docs/: contributing.md  requirements.txt
docs/source/: api.rst  cloud_function.rst  cloud_functions.rst  cloud_preprocessing.rst  conf.py  data_preprocess.rst  deployment.rst  hardware_and_firmware_versions.rst  index.rst  information_for_developers.rst  installation.rst  output_data.rst  routines.rst  using_the_gateway.rst  version_history.rst
docs/source/cloud/: creating_service_accounts.rst  index.rst  uploads.rst
docs/source/deployment/: check.rst  configuration.rst  index.rst  manual_installation.rst  registration.rst  using_balena.rst
docs/source/usage/: configuration_files.rst  daemonising.rst  gateway_cli.rst  index.rst  routine_files.rst  tips.rst
dummy_serial/: __init__.py  constants.py  dummy_serial.py  exceptions.py  utils.py
examples/configurations/: manual-test.json  multi-node-aventa-tests.json  test.json
examples/routines/: manual-test.json  multi-node-aventa-tests.json  multi-node-get-battery.json  multi-node-quick-test.json  multi-node-time-synced.json  pbl-test-paper_five.json  pbl-test-paper_four.json  pbl-test-paper_three.json  pbl-test-paper_two.json  pbl-test-twonodes-timesync.json  single-node-aventa-tests-high-speed.json  single-node-aventa-tests-with-restart.json  single-node-aventa-tests.json
gateway/: __init__.py  cli.py  exceptions.py  gateway.py  handlers.py  uploaders.py
gateway/readers/: __init__.py  constants.py  packet_reader.py  simulated_serial.py
gateway/uploaders/: uploader.py
tests/: __init__.py  base.py  test_cli.py  test_cloud_function.py  test_configuration.py  test_data_gateway.py  test_dummy_serial.py  test_file_handler.py  test_gateway.py  test_packet_reader.py  test_persistence.py  test_preprocess.py  test_reader.py  test_routine.py  test_simulated_serial.py  test_uploaders.py  valid_configuration.json
tests/cloud_function/: test_cloud_function.py  test_file_handler.py  test_main.py  test_preprocess.py  test_preprocessing.py
tests/data_gateway/: test_cli.py  test_dummy_serial.py  test_persistence.py
tests/data_gateway/reader/: test_configuration.py  test_packet_reader.py
tests/dummy_serial/: dummy_serial.py  utils.py
tests/reader/: test_configuration.py  test_packet_reader.py  valid_configuration.py
tests/test_cloud_function/: test_big_query.py  test_cloud_function.py  test_deployment.py  test_file_handler.py  test_forms.py  test_preprocessing.py
tests/test_cloud_functions/: __init__.py  base.py  mocks.py  test_big_query.py  test_cloud_function.py  test_deployment.py  test_forms.py  test_main.py  test_preprocessing.py
tests/test_data_gateway/: test_cli.py  test_configuration.py  test_data_gateway.py  test_packet_reader.py  test_persistence.py  test_routine.py
tests/test_reader/: test_configuration.py  test_packet_reader.py
