[metadata]
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,build
ignore = F405, E501, E203, W503

[isort]
line_length=120
default_section = THIRDPARTY
known_third_party = celery,corsheaders,django*,drf*,environ,fontawesome_5,graphene,grapple,modelcluster,requests,rest*,storages,taggit,wagtail*,whitenoise
known_first_party = data_gateway,app,tests,cloud_functions,preprocessing,big_query,forms,exceptions,main,window_handler
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports=2
# These are necessary for `isort` to create import statements that are
# compatible with `black`. Changing these will break our auto-formatting.
# See <https://black.readthedocs.io/en/stable/the_black_code_style.html>.
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True

[pydocstyle]
ignore = D100, D101, D104, D105, D107, D203, D205, D213, D301, D400, D415
